crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__sorting__select_order_by_album_artist_name.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Bad Boy Boogie"
      },
      {
        "Name": "Breaking The Rules"
      },
      {
        "Name": "C.O.D."
      },
      {
        "Name": "Dog Eat Dog"
      },
      {
        "Name": "Evil Walks"
      }
    ]
  }
]
