crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__sorting__select_order_by_artist_album_count_agg.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
